# goodhart-cascade

./: .gitignore  EXPERIMENTS.md  EXPERIMENT_PLAN.md  README.md  output.txt  output1.txt  pyproject.toml  requirements.txt
configs/: 1.5B_R1.yaml  1.5B_R1_v2.yaml  1.5B_R2.yaml  1.5B_R2_v2.yaml  1.5B_R3.yaml  1.5B_R3_v2.yaml  1.5B_R4.yaml  1.5B_R4_v2.yaml  1.5B_R5.yaml  1.5B_R5_v2.yaml  1.5B_Ranti_v2.yaml  1.5B_Ropt_v2.yaml  14B_R1.yaml  14B_R1_v2.yaml  14B_R2.yaml  14B_R2_v2.yaml  14B_R3.yaml  14B_R3_v2.yaml  14B_R4.yaml  14B_R4_v2.yaml  14B_R5.yaml  14B_R5_v2.yaml  7B_R1.yaml  7B_R1_v2.yaml  7B_R2.yaml  7B_R2_v2.yaml  7B_R2_w1.yaml  7B_R2_w2.yaml  7B_R3.yaml  7B_R3_v2.yaml  7B_R4.yaml  7B_R4_v2.yaml  7B_R5.yaml  7B_R5_v2.yaml  7B_Ranti_v2.yaml  7B_Ropt_v2.yaml  R1_14b_verify.yaml  R1_test_only.yaml  R2_14b_verify.yaml  R2_test_pylint.yaml  (+17 more)
data/: filter_by_base_passrate.py  sweet_spot_1.5B.json.partial  sweet_spot_14B.json.partial
docs/: oral_plan.md  theory_optimal_weights.md
paper/: main.tex  references.bib
results/: base_1.5B_eval.json
scripts/: _auto_launch_14b.sh  _launch_filtered_multi.sh  _launch_filtered_train.sh  _launch_passrate_filter.sh  _monitor_all.sh  eval_1.5b_experiments.py  eval_checkpoints.py  eval_cross_scale.py  eval_pass1.py  eval_passk_fast.py  eval_single_checkpoint.py  eval_taco.py  eval_v2_seq.py  git_push.sh  launch_train.sh  measure_cov.py  prepare_data.py  run_all.sh  run_all_8gpu.sh  run_analysis.sh  run_eval.sh  run_experiment.sh  run_experiment_2gpu.sh  run_experiment_fsdp.sh  run_experiment_fsdp_safe.sh  run_experiment_snipe.sh  (+6 more)
(+262 files in other folders)
