[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goodhart-cascade"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "datasets",
    "numpy",
    "pylint",
    "radon",
    "ruptures",
    "statsmodels",
    "matplotlib",
    "openai>=1.0",
]

[project.optional-dependencies]
train = ["verl>=0.2", "vllm>=0.6"]
dev = ["pytest", "pytest-cov", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
